--- a/PyQt_mix_color/ui.ui
+++ b/PyQt_mix_color/ui.ui
@@ -20,7 +20,7 @@
    <widget class="QSlider" name="horizon_R">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>160</x>
       <y>80</y>
       <width>160</width>
       <height>30</height>
@@ -36,7 +36,7 @@
    <widget class="QSlider" name="horizon_B">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>160</x>
       <y>150</y>
       <width>160</width>
       <height>30</height>
@@ -52,7 +52,7 @@
    <widget class="QSlider" name="horizon_G">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>160</x>
       <y>230</y>
       <width>160</width>
       <height>30</height>
@@ -68,7 +68,7 @@
    <widget class="QLabel" name="label_R">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>40</x>
       <y>80</y>
       <width>60</width>
       <height>30</height>
@@ -86,7 +86,7 @@ background-color: rgb(255, 0, 0);
    <widget class="QLabel" name="label_B">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>40</x>
       <y>150</y>
       <width>60</width>
       <height>30</height>
@@ -103,7 +103,7 @@ background-color: rgb(0, 0, 255);</string>
    <widget class="QLabel" name="label_G">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>40</x>
       <y>230</y>
       <width>60</width>
       <height>30</height>
@@ -128,6 +128,54 @@ background-color: rgb(0, 255, 0);</string>
     </property>
     <property name="text">
      <string>Color</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="value_R">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>80</y>
+      <width>50</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 10pt &quot;Arial&quot;;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="value_B">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>150</y>
+      <width>50</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 10pt &quot;Arial&quot;;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="value_G">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>230</y>
+      <width>50</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 10pt &quot;Arial&quot;;</string>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
