--- a/PyQt_/main_ui.ui
+++ b/PyQt_/main_ui.ui
@@ -109,6 +109,19 @@
        <string>Home</string>
       </property>
      </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>20</y>
+        <width>1050</width>
+        <height>760</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="page_3"/>
    </widget>
